--- a/BitCoinExchangeRate/BitCoinExchangeRate.csproj
+++ b/BitCoinExchangeRate/BitCoinExchangeRate.csproj
@@ -74,6 +74,7 @@
     <Compile Include="FormOptions.Designer.cs">
       <DependentUpon>FormOptions.cs</DependentUpon>
     </Compile>
+    <Compile Include="InternetHelper.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Model\USD.cs" />
     <Compile Include="Program.cs" />
